# quadruped-rl

./: .gitignore  ControllerRL.py  Joystick.py  Logger.py  Logger_mini.py  Params.py  Paths.py  PyBulletSimulator.py  README.md  config_solo12.yaml  gamepadClient.py  height_map.txt  heightmap_debug.py  keyboardClient.py  keyboardClient2.py  main_solo12_RL.py  main_solo12_RL_cpp_benchmark.py  main_solo12_RL_numpy.py  numpy_mlp.py  sampling_bounds.txt  utils.py
cpuMLP/: CMakeLists.txt  Interface.cpp  Interface.hpp  Types.h  __init__.py  cMLP2.hpp  cpuMLP.cpp  cpuMLP.hpp  main.cpp
solo12/: solo12.urdf  solo12_isaac.urdf  solo_classic.urdf  solo_reduced.urdf
solo12/meshes/: stl2obj.py
solo12/urdf/: solo.urdf.txt
tmp-checkpoints/policy-06-30-17-31-24/: Params.py  full_2000.pt  var2000.csv
tmp_checkpoints/: changeNetFormat.py  policy_1.pt  policy_2.pt  policy_2048_no_est_no_hind_invert_Nov16.pt  policy_4096_no_est_hind_invert_Nov16.pt  policy_Feb07_16-38_robust_no_tunnel.pt  policy_Feb26.pt  policy_March.pt  policy_Nov17.pt  policy_ROBUST_ELU_Feb_15-15-44-04_03-09-164.pt
tmp_checkpoints/policy-06-30-17-31-24/: full_2000.npy  mean2000.csv
tmp_checkpoints/server_save/dec/: policy_D8_2D.pt
tmp_checkpoints/server_save/jan/: policy_SisaacJ15_2.pt  policy_SisaacJ17.pt  policy_SisaacJ17_2.pt  policy_SisaacJ18.pt  policy_SisaacJ18_2.pt  policy_SquattroJ15_2.pt  policy_SquattroJ17.pt  policy_SquattroJ17_2.pt  policy_SquattroJ18.pt  policy_SquattroJ18_2.pt  policy_SsolodJ15_2.pt  policy_SsolodJ17.pt  policy_SsolodJ17_2.pt  policy_SsolodJ18.pt
tmp_checkpoints/state_estimation/: state_estimator.npy  state_estimator.txt  state_estimator_jit.pt  symmetric_state_estimator.npy  symmetric_state_estimator.txt
(+72 files in other folders)
